--- a/js_client/index.html
+++ b/js_client/index.html
@@ -11,6 +11,7 @@
         <input type="password" name="password" id="" placeholder="your password">
         <input type="submit" name="" id="" value="login">
     </form>
+    <div id="content-container"></div>
     <script src="./client.js"></script>
 </body>
 </html>
