search via rest api and js client

--- a/js_client/index.html
+++ b/js_client/index.html
@@ -11,6 +11,10 @@
         <input type="password" name="password" id="" placeholder="your password">
         <input type="submit" name="" id="" value="login">
     </form>
+    <form action="" id="search-form" method="GET">
+        <input type="text" name="q" id="" placeholder="your search">
+        <input type="submit" name="" id="" value="search">
+    </form>
     <div id="content-container"></div>
     <script src="./client.js"></script>
 </body>
