--- a/js_client/index.html
+++ b/js_client/index.html
@@ -3,19 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/instantsearch.css@7.3.1/themes/reset-min.css" 
+    integrity="sha256-t2ATOGCtAIZNnzER679jwcFcKYfLlw01gli6F6oszk8=" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/instantsearch.css@7.4.5/themes/satellite-min.css" 
+    integrity="sha256-TehzF/2QvNKhGQrrNpoOb2Ck4iGZ1J/DI4pkd2oUsBc=" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
-    <form action="" id="login-form" method="POST">
+    <form style="display:none;" id="login-form" method="POST">
         <input type="text" name="username" id="" placeholder="your username">
         <input type="password" name="password" id="" placeholder="your password">
         <input type="submit" name="" id="" value="login">
     </form>
-    <form action="" id="search-form" method="GET">
-        <input type="text" name="q" id="" placeholder="your search">
-        <input type="submit" name="" id="" value="search">
-    </form>
     <div id="content-container"></div>
+    <div id="searchbox"></div>
+    <div id="clear-refinements"></div>
+    <div id="user-list"></div>
+    <div id="public-list"></div>
+    <div id="hits"></div>
+    <script src="https://cdn.jsdelivr.net/npm/algoliasearch@4.5.1/dist/algoliasearch-lite.umd.js" 
+    integrity="sha256-EXPXz4W6pQgfYY3yTpnDa3OH8/EPn16ciVsPQ/ypsjk=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/instantsearch.js@4.8.3/dist/instantsearch.production.min.js" 
+    integrity="sha256-LAGhRRdtVoD6RLo2qDQsU2mp+XVSciKRC8XPOBWmofM=" crossorigin="anonymous"></script>
     <script src="./client.js"></script>
 </body>
 </html>
